# Shovel_Mod_Loader

./: .gitignore  CMakeLists.txt  README.md  bgm_database.yaml  compact_bitmap_font.hpp  d3d9.def  d3d9_proxy.cpp  d3d9_text_interceptor.cpp  debug_console.hpp  enhanced_bgm_system.hpp  font_hook_finder.cpp  font_texture_capture.h  game_text_hook.cpp  gles_hook_mod.cpp  mod_manager.hpp  simple_overlay.cpp  simple_yaml_parser.hpp  sound_hook.cpp  ycg_hash.hpp
EGL/: egl.h  eglext.h  eglplatform.h
config/: mod_config.ini
glad/: glad.c  glad.h
